# hugoifier

./: .gitignore  404.html  CNAME  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  index.html  mkdocs.yml  processing_log.txt  prompts.md  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
about/: index.html
architecture/: index.html
cli-reference/: index.html
docs/: about.md  architecture.md  cli-reference.md  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
hugoifier/: __init__.py  cli.py  config.py
hugoifier/utils/: analyze.py  cloudflare.py  complete.py  decapify.py  deploy.py  enhance.py  generate_decap_config.py  hugoify.py  parser.py  theme_finder.py  theme_patcher.py  translate.py
output/adrian-hugo/: hugo.toml
output/adrian-hugo/public/: index.html  index.json  index.xml  sitemap.xml
output/gojournal-hugo/: hugo.toml
output/nebula/: hugo.toml
output/revolve-hugo/: hugo.toml
output/wishfund-hugo/: hugo.toml
search/: search_index.json
src/: cli.py  config.py  main.py
src/utils/: analyze.py  analyze_html.py  cloudflare.py  complete.py  configure_hugo.py  decapify.py  deploy.py  generate_decap_config.py  hugoify.py  parser.py  replace_content.py  split_html.py  theme_finder.py  theme_patcher.py  translate.py
tests/: conftest.py  test_analyze.py  test_cloudflare.py  test_complete.py  test_config.py  test_decapify.py  test_deploy.py  test_enhance.py  test_generate_decap_config.py  test_hugoify.py  test_parser.py  test_theme_finder.py  test_theme_patcher.py  test_translate.py
(+640 files in other folders)
