[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hugoifier"
version = "0.3.0"
description = "AI-powered Hugo theme converter with Decap CMS integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "CONFLICT LLC" },
]
keywords = ["hugo", "cms", "decap", "static-site", "theme", "ai", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.5.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://hugoifier.dev"
Documentation = "https://hugoifier.dev"
Repository = "https://github.com/ConflictHQ/hugoifier"
Issues = "https://github.com/ConflictHQ/hugoifier/issues"

[project.scripts]
hugoifier = "hugoifier.cli:main"

[tool.setuptools.packages.find]
include = ["hugoifier*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"hugoifier/cli.py" = ["E501"]
"hugoifier/utils/hugoify.py" = ["E501"]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
